--- a/web-app/package.json
+++ b/web-app/package.json
@@ -16,8 +16,11 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
     "@testing-library/jest-dom": "^6.4.0",
     "@testing-library/react": "^14.1.2",
+    "babel-jest": "^29.7.0",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "jest": "^29.7.0",
