--- a/web-app/package.json
+++ b/web-app/package.json
@@ -11,6 +11,8 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
+    "dotenv": "^16.4.5",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
