--- a/web-app/package.json
+++ b/web-app/package.json
@@ -12,8 +12,9 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "@vercel/postgres": "^0.10.0",
     "dotenv": "^16.4.5",
-    "next": "14.0.4",
+    "next": "^14.0.4",
     "react": "^18",
     "react-dom": "^18"
   },
